# pick-full-wm

./: .xinitrc  Cargo.toml  README.md  pick-full.desktop  settings-keyboard.toml  settings-mouse.toml  settings.toml  testing.sh  xeph.sh
src/: atoms.rs  binaries.rs  calc.rs  events.rs  ewmh.rs  keymap.rs  main.rs  pf.rs  safety.rs  settings.rs  setup.rs  state.rs  windows.rs
src/events/: client.rs  input.rs  window.rs
src/setup/: ewmh.rs  input.rs  internal.rs
src/windows/: audits.rs  checks.rs  core.rs  gets.rs  layout.rs  misc.rs  workspaces.rs
