[package]
name = "pick-full-wm"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33.2", default-features = false, features = ["x11", "default_fonts", "glow"] }
serde = { version = "1.0.228", features = ["derive"] }
shellexpand = "3.1.1"
toml = "0.9.10"
x11rb = { version = "0.13.2", features = ["randr"] }
